--- a/statics/package.json
+++ b/statics/package.json
@@ -20,6 +20,7 @@
     "@fontsource/source-sans-pro": "^4.2.2",
     "bootstrap": "^5.0.0-beta3",
     "codemirror": "^5.61.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "path": "^0.12.7"
   }
 }
