using path browserify

--- a/statics/package.json
+++ b/statics/package.json
@@ -21,6 +21,6 @@
     "bootstrap": "^5.0.0-beta3",
     "codemirror": "^5.61.0",
     "lodash": "^4.17.21",
-    "path": "^0.12.7"
+    "path-browserify": "^1.0.1"
   }
 }
