--- a/statics/package.json
+++ b/statics/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fontsource/source-sans-pro": "^4.2.2",
     "bootstrap": "^5.0.0-beta3",
+    "bootstrap-icons": "^1.4.1",
     "codemirror": "^5.61.0",
     "lodash": "^4.17.21",
     "path-browserify": "^1.0.1"
