--- a/statics/package.json
+++ b/statics/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "statics",
-  "version": "1.0.0",
-  "description": "",
-  "private": true,
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "css-loader": "^5.2.4",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.34.0",
-    "webpack-cli": "^4.6.0"
-  },
-  "dependencies": {
-    "@fontsource/source-sans-pro": "^4.2.2",
-    "bootstrap": "^5.0.0-beta3",
-    "bootstrap-icons": "^1.4.1",
-    "codemirror": "^5.61.0",
-    "lodash": "^4.17.21",
-    "path-browserify": "^1.0.1"
-  }
+    "name": "statics",
+    "version": "1.0.0",
+    "description": "",
+    "private": true,
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "webpack"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "browserslist": ">=4.16.5",
+        "css-loader": "^6.2.0",
+        "style-loader": "^3.2.1",
+        "webpack": "^5.46.0",
+        "webpack-cli": "^4.7.2"
+    },
+    "dependencies": {
+        "@fontsource/source-sans-pro": "^4.5.0",
+        "bootstrap": "^5.0.2",
+        "bootstrap-icons": "^1.5.0",
+        "codemirror": "^5.62.2",
+        "lodash": "^4.17.21",
+        "path-browserify": "^1.0.1"
+    }
 }
