--- a/statics/package.json
+++ b/statics/package.json
@@ -21,6 +21,7 @@
         "@fontsource/source-sans-pro": "^4.5.0",
         "bootstrap": "^5.0.2",
         "bootstrap-icons": "^1.5.0",
+        "jquery": "^3.2.1",
         "codemirror": "^5.62.2",
         "lodash": "^4.17.21",
         "path-browserify": "^1.0.1"
